add index page + add initial header and footer for not logged in pages

--- a/index.html
+++ b/index.html
@@ -1,41 +1,47 @@
-<!doctype html>
-<html class="no-js" lang="">
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title></title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
-
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
-
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
-
-  <meta name="theme-color" content="#fafafa">
+  <meta charset="UTF-8">
+  <title>Title</title>
 </head>
 
 <body>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+<header>
+<div class="header">
+  <img>logo
 
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
+  <a href="/login">Login</a>
+
+  <div class="panel">
+    <a>Shop</a>
+    <a>Contact</a>
+  </div>
+
+</div>
+</header>
+
+<div class="content">
+  <select>
+    <option>ATV Kørsel</option>
+    <option>Paintball</option>
+    <option>Klatring</option>
+    <option>Kajak</option>
+    <option>Repelling</option>
+  </select>
+</div>
+
+
+<footer>
+  <div class="footer">
+    <p>Kontaktoplysninger:</p>
+    <p>Adresse: Guldbergsgade 15</p>
+    <p>Mail: </p>
+    <a href="mailto:trollmax@outlook.dk">trollmax@outlook.dk</a>
+    <p>Telefon: </p>
+    <a href="tel: 22884466">27850346</a>
+  </div>
+</footer>
+
 </body>
-
 </html>
