--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <header>
 <div class="header">
-  <img>logo
+  <a><img>logo</a>
 
   <a href="/login">Login</a>
 
@@ -20,6 +20,7 @@
 
 </div>
 </header>
+
 
 <div class="content">
   <select>
