add contact page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>Bob's Fun Land</title>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
 </header>
 
 
-<div class="content">
+<div id="content">
   <select>
     <option>ATV Kørsel</option>
     <option>Paintball</option>
