--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <div class="panel">
     <a>Shop</a>
-    <a>Contact</a>
+    <a>Kontakt</a>
   </div>
 
 </div>
@@ -23,6 +23,8 @@
 
 
 <div id="content">
+  <h2>Bob's Fun Land</h2>
+
   <select>
     <option>ATV Kørsel</option>
     <option>Paintball</option>
