--- a/login.html
+++ b/login.html
@@ -11,8 +11,8 @@
   <h2>Login</h2>
 
   <form action="login" method="post">
-    <input type="email">
-    <input type="password">
+    <input type="email" placeholder="example@mail.com" required>
+    <input type="password" placeholder="Enter password" required>
     <input type="submit" value="Login">
   </form>
 
