--- a/header.html
+++ b/header.html
@@ -2,42 +2,27 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Activities</title>
 
 </head>
 
 <header>
   <div class="header">
-    <img>logo
+    <a><img>logo</a>
 
-    <a href="/login">Login</a>
+    <a href="/login">Logout</a>
 
     <div class="panel">
       <a>Shop</a>
-
+      <a>Booking</a>
     </div>
 
   </div>
 </header>
 
-    <body>
 
-
-<div class ="requirements">
-  <h2> Krav for aktivtitet</h2>
-<p> Alder:</p>
-<p> Højde:</p>
-  </div>
-
-
-<div class = "information">
-  <h2> Information for aktivitet</h2>
-
-</div>
-
+<body>
 
 </body>
-
 
 <footer>
   <div class="footer">
@@ -53,3 +38,4 @@
 
 
 </html>
+
