--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Bob's Fun Land</title>
+  <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
