add generisk css + referance in each html file

--- a/booking.html
+++ b/booking.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Booking</title>
+  <link rel="stylesheet" href="css/generisk.css">
 </head>
 
 <body>
@@ -26,7 +27,7 @@
       <p>Tid</p>
       <input type="time" required>
       <p>Deltagere</p>
-      <input type="number" placeholder="5" required>
+      <input type="number" placeholder="eks 5" required>
       <p>Instruktør</p>
       <select>
         <option>Jens Madsen</option>
