--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Bob's Fun Land</title>
   <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/generisk.css">
 </head>
 
 <body>
@@ -35,8 +36,9 @@
   </select>
 
   <div class="chosenActivity">
+    <h3>Aktivitet</h3>
     <div class="requirements">
-      <h2> Krav for aktivtitet</h2>
+      <h4> Krav for aktivtitet</h4>
       <p> Alder:</p>
       <p> Højde:</p>
       <img>
@@ -44,7 +46,7 @@
 
 
     <div class="information">
-      <h2> Information for aktivitet</h2>
+      <h4> Information for aktivitet</h4>
     </div>
   </div>
 </div>
