--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
   <meta charset="UTF-8">
   <title>Bob's Fun Land</title>
@@ -11,7 +11,7 @@
 
 <header>
   <div class="header">
-    <a><img>logo</a>
+    <img log>
 
     <a href="/login">Login</a>
 
