--- a/booking.html
+++ b/booking.html
@@ -4,9 +4,16 @@
   <meta charset="UTF-8">
   <title>Booking</title>
   <link rel="stylesheet" href="css/generisk.css">
+
+  <!-- HTML include jquery - CDN til jquery library -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+  <script src="js/jqueryIncludeHeaderFooter.js"></script>
 </head>
 
 <body>
+
+<div id="header"></div>
+
 <div id="content">
 
   <h2>Booking</h2>
@@ -48,9 +55,10 @@
       </tr>
       <tr></tr>
     </table>
-
   </div>
-
 </div>
+
+<div id="footer"></div>
+
 </body>
 </html>
