--- a/index.html
+++ b/index.html
@@ -5,23 +5,15 @@
   <title>Bob's Fun Land</title>
   <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="css/generisk.css">
-</head>
 
+  <!-- HTML include jquery - CDN til jquery library -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+  <script src="js/jqueryIncludeHeaderFooter.js"></script>
+
+</head>
 <body>
 
-<header>
-  <div class="header">
-    <a><img>logo</a>
-
-    <a href="/login">Login</a>
-
-    <div class="panel">
-      <a>Shop</a>
-      <a>Kontakt</a>
-    </div>
-
-  </div>
-</header>
+<div id="header"></div>
 
 
 <div id="content">
@@ -51,17 +43,7 @@
   </div>
 </div>
 
-
-<footer>
-  <div class="footer">
-    <p>Kontaktoplysninger:</p>
-    <p>Adresse: Guldbergsgade 15</p>
-    <p>Mail: </p>
-    <a href="mailto:trollmax@outlook.dk">trollmax@outlook.dk</a>
-    <p>Telefon: </p>
-    <a href="tel: 22884466">27850346</a>
-  </div>
-</footer>
+<div id="footer"></div>
 
 </body>
 </html>
