--- a/login.html
+++ b/login.html
@@ -4,8 +4,14 @@
   <meta charset="UTF-8">
   <title>Login</title>
   <link rel="stylesheet" href="css/generisk.css">
+
+  <!-- HTML include jquery - CDN til jquery library -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+  <script src="js/jqueryIncludeHeaderFooter.js"></script>
 </head>
 <body>
+
+<div id="header"></div>
 
 <div id="content">
 
@@ -18,6 +24,8 @@
   </form>
 
 </div>
+
+<div id="footer"></div>
 
 </body>
 </html>
