--- a/booking.html
+++ b/booking.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Booking</title>
   <link rel="stylesheet" href="css/generisk.css">
+  <link rel="stylesheet" href="css/booking.css">
 </head>
 
 <body>
