laver videre på html og css

--- a/header.html
+++ b/header.html
@@ -1,10 +1,10 @@
 <header>
   <!-- Lav til en nav -->
   <div class="header">
-    <a href="index.html"><img src="images/Logo.png" width="300px">logo</a>
-    <a href="login.html">Login</a>
+    <a href="index.html"><img src="images/LogoPink.png" width="400px"></a>
     <div class="panel">
       <a href="#">Shop</a>
+      <a href="login.html">Login</a>
     </div>
   </div>
 </header>
