--- a/index.html
+++ b/index.html
@@ -16,9 +16,18 @@
 
 <div id="header"></div>
 
+<h2>Bob's Fun Land</h2>
+
+<div class ="introducktion">
+  <p> Velkommen til Bobs fun land!</p>
+  <p> Vi tilbyder mange forskellige adventure aktiviteter. </p>
+  <p> Du kan læse og booke den aktivitet du ønsker herunder.</p>
+</div>
+
+
+
 
 <div id="content">
-  <h2>Bob's Fun Land</h2>
 
   <select id="dropdownActivity">
     <option>ATV Kørsel</option>
@@ -39,7 +48,7 @@
 
 
     <div class="information">
-      <h4> Information for aktivitet</h4>
+      <h4> Information om aktivitet</h4>
     </div>
   </div>
 </div>
