--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Login</title>
   <link rel="stylesheet" href="css/generisk.css">
-
+  <link rel="stylesheet" href="css/login.css">
   <!-- HTML include jquery - CDN til jquery library -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
   <script src="js/jqueryIncludeHeaderFooter.js"></script>
@@ -17,10 +17,10 @@
 
   <h2>Login</h2>
 
-  <form action="login" method="post">
+  <form action="http://localhost:8080/login" method="post" id="loginForm">
     <input type="email" placeholder="example@mail.com" required>
     <input type="password" placeholder="Enter password" required>
-    <input type="submit" value="Login">
+    <input type="submit" value="Login" id="login">
   </form>
 
 </div>
