Design af index, header, footer

--- a/header.html
+++ b/header.html
@@ -2,9 +2,12 @@
   <!-- Lav til en nav -->
   <div class="header">
     <a href="index.html"><img src="images/LogoPink.png" width="400px"></a>
+    <a href ="login.html" id="loginHeader">Login</a>
+
     <div class="panel">
-      <a href="#">Shop</a>
-      <a href="login.html">Login</a>
+      <a href="#" id ="shopHeader" >Shop</a>
+      <a href ="#" id="pakkerHeader" >Pakker </a>
+
     </div>
   </div>
 </header>
