--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <h2>Bob's Fun Land</h2>
 
 <div class ="introducktion">
-  <p> Velkommen til Bobs fun land!</p>
+  <p> Velkommen til Bobs Fun Land!</p>
   <p> Vi tilbyder mange forskellige adventure aktiviteter. </p>
   <p> Du kan læse og booke den aktivitet du ønsker herunder.</p>
 </div>
@@ -28,7 +28,7 @@
 
 
 <div id="content">
-
+  <h3>Aktiviteter</h3>
   <select id="dropdownActivity">
     <option>ATV Kørsel</option>
     <option>Paintball</option>
@@ -38,7 +38,6 @@
   </select>
 
   <div class="chosenActivity">
-    <h3>Aktivitet</h3>
     <div class="requirements">
       <h4> Krav for aktivtitet</h4>
       <p> Alder:</p>
@@ -53,7 +52,6 @@
   </div>
 </div>
 
-<div id="footer"></div>
 
 </body>
 </html>
