linter fix+ header and footer div id

--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,5 @@
 <footer>
-  <div class="footer">
+  <div id="footer">
     <p>Kontaktoplysninger: </p>
     <p>Adresse: Guldbergsgade 15</p>
     <p>Mail: </p>
