--- a/header.html
+++ b/header.html
@@ -1,6 +1,6 @@
 <header>
   <!-- Lav til en nav -->
-  <div class="header">
+  <div id="header">
     <a href="index.html"><img src="images/LogoPink.png" width="400px"></a>
     <a href ="login.html" id="loginHeader">Login</a>
 
