Add changes in login.css

--- a/login.html
+++ b/login.html
@@ -18,8 +18,8 @@
   <h2>Login</h2>
 
   <form action="http://localhost:8080/login" method="post" id="loginForm">
-    <input type="email" placeholder="example@mail.com" required>
-    <input type="password" placeholder="Enter password" required>
+    <input type="email" placeholder="example@mail.com" required id="email">
+    <input type="password" placeholder="Enter password" required id="password">
     <input type="submit" value="Login" id="login">
   </form>
 
