--- a/header.html
+++ b/header.html
@@ -1,7 +1,9 @@
 <header>
   <!-- Lav til en nav -->
-    <a href="index.html"><img src="images/LogoPink.png" width="400px"></a>
+    <div class="Logo">
+    <a href="index.html"> <img src="images/LogoPink.png" width="200px", ></a>
     <a href ="login.html" id="loginHeader">Login</a>
+    </div>
 
     <div class="panel">
       <a href="#" id ="shopHeader" >Shop</a>
