--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
 <div id="header"></div>
 
+<div id="content">
+
 <h2>Bob's Fun Land</h2>
 
 <div class ="introducktion">
@@ -27,7 +29,7 @@
 
 
 
-<div id="content">
+<div id="activityContainer">
   <h3>Aktiviteter</h3>
   <select id="dropdownActivity">
     <option>ATV Kørsel</option>
@@ -37,7 +39,10 @@
     <option>Repelling</option>
   </select>
 
+
   <div class="chosenActivity">
+    <h3>Valgt Aktivitet:</h3>
+    <div id ="contentActivity" >
     <div class="requirements">
       <h4> Krav for aktivtitet</h4>
       <p> Alder:</p>
@@ -46,10 +51,16 @@
     </div>
 
 
+    <div class ="adventureImg">
+      <img src="images/adventure.jpg" width="400px">
+    </div>
+
     <div class="information">
-      <h4> Information om aktivitet</h4>
+      <h4> Information om aktivitet:</h4>
     </div>
   </div>
+</div>
+</div>
 </div>
 
 <div id="footer"></div>
