footer done design

--- a/footer.html
+++ b/footer.html
@@ -1,7 +1,20 @@
 <footer>
-    <p>Adresse: Guldbergsgade 15</p>
-    <p>Mail: </p>
-    <a href="mailto:trollmax@outlook.dk">trollmax@outlook.dk</a>
-    <p>Telefon: </p>
-    <a href="tel: 22884466">27850346</a>
+  <table>
+    <tr>
+      <th>Adresse</th>
+      <th>Mail</th>
+      <th>Telefon</th>
+    </tr>
+    <tr>
+      <td>
+        <p>Guldbergsgade 15</p>
+      </td>
+      <td>
+        <a href="mailto:trollmax@outlook.dk">trollmax@outlook.dk</a>
+      </td>
+      <td>
+        <a href="tel: 22884466">+45 27850346</a>
+      </td>
+    </tr>
+  </table>
 </footer>
