--- a/booking.html
+++ b/booking.html
@@ -30,7 +30,7 @@
         <p>Tid</p>
         <input type="time" required>
         <p>Deltagere</p>
-        <input type="number" placeholder="eks 5" required>
+        <input type="text" placeholder="eks 5" required>
         <p>Instruktør</p>
         <select id="instructorDropDown"></select>
       </div>
