add js for dropdown activities for use on homepage and booking page

--- a/booking.html
+++ b/booking.html
@@ -20,7 +20,7 @@
   <h2>Booking</h2>
 
   <div id="booking">
-    <form action="" method="post" id="bookForm">
+    <form action="http://localhost:8080/booking" method="post" id="bookForm">
       <p id="bookingFormHeader">Registrer booking</p>
       <div id="bookingFormContent">
         <p>Aktivitet</p>
