Add changes in login.html, .js and .css

--- a/login.html
+++ b/login.html
@@ -21,8 +21,8 @@
   <form action="http://localhost:8080/login" method="post" id="loginForm">
     <input type="email" placeholder="example@mail.com" required id="email">
     <input type="password" placeholder="Enter password" required id="password">
-    <input type="button" value="Login" id="login" onclick="validate()">
-    <input type="submit" value="Login" id="login3">
+    <!--<input type="button" value="Login" id="login" onclick="validate()">-->
+    <input type="submit" value="Login" id="login">
   </form>
 
 </div>
