--- a/booking.html
+++ b/booking.html
@@ -23,6 +23,11 @@
     <form action="http://localhost:8080/booking" method="post" id="bookForm">
       <p id="bookingFormHeader">Registrer booking</p>
       <div id="bookingFormContent">
+        <p>Kunde information</p>
+        <input name="customerName" type="text" placeholder="eks Kirstine" class="input">
+        <input name="customerEmail" type="text" placeholder="eks Kirstine@mail.dk" class="input">
+        <input name="customerPhone" type="text" placeholder="50939393" class="input">
+
         <p>Aktivitet</p>
         <select name="activity" id="activityDropDown"></select>
         <p>Dato</p>
@@ -30,7 +35,7 @@
         <p>Tid</p>
         <input name="time" type="time" required>
         <p>Deltagere</p>
-        <input name="participants" type="text" placeholder="eks 5" required id="participants">
+        <input name="participants" type="text" placeholder="eks 5" required class="input">
         <p>Instruktør</p>
         <select name="instructor" id="instructorDropDown"></select>
       </div>
