tilføjet booking information på index og css

--- a/index.html
+++ b/index.html
@@ -58,11 +58,18 @@
       <h4> Information om aktivitet:</h4>
 
     </div>
-  </div>
+      <div id="bookingInformation">
+        <p> Ønsker du at lave en booking </p>
+        <p>så send en mail til trollmax@outlook.dk eller ring på; +45 27850346 </p>
+        <p>Med følgende information; </p>
+        <p>dit navn, telefonnummer, mail, antal deltagere, dato og tid.</p>
+    </div>
+    </div>
 </div>
 </div>
 </div>
 
 <div id="footer"></div>
+
 </body>
 </html>
