--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <p> Ønsker du at lave en booking </p>
         <p>så send en mail til trollmax@outlook.dk eller ring på; +45 27850346 </p>
         <p>Med følgende information; </p>
-        <p>dit navn, telefonnummer, mail, antal deltagere, dato og tid.</p>
+        <p>Den ønskede aktivitet, dit navn, telefonnummer, mail, antal deltagere, dato og tid.</p>
     </div>
     </div>
 </div>
