--- a/booking.html
+++ b/booking.html
@@ -29,7 +29,7 @@
         <input name="customerPhone" type="text" placeholder="50939393" class="input">
 
         <p>Aktivitet</p>
-        <select name="activity" id="activityDropDown"></select>
+        <select id="activityDropDown"></select>
         <p>Dato</p>
         <input name="date" type="date" required>
         <p>Tid</p>
@@ -37,7 +37,7 @@
         <p>Deltagere</p>
         <input name="participants" type="text" placeholder="eks 5" required class="input">
         <p>Instruktør</p>
-        <select name="instructor" id="instructorDropDown"></select>
+        <select id="instructorDropDown"></select>
       </div>
       <input type="submit" value="Gem" class="saveButton">
     </form>
