ready for rasmus merge

--- a/booking.html
+++ b/booking.html
@@ -47,6 +47,9 @@
     <h3>Bookings</h3>
     <table>
       <tr>
+        <th>Kunde</th>
+        <th>Kunde email</th>
+        <th>Kunde telefon</th>
         <th>Ordrenummer</th>
         <th>Dato</th>
         <th>Tid</th>
