display booking not by time

--- a/booking.html
+++ b/booking.html
@@ -45,7 +45,7 @@
 
   <div id="bookings">
     <h3>Bookings</h3>
-    <table>
+    <table id="tableBooking">
       <tr>
         <th>Kunde</th>
         <th>Kunde email</th>
