Added localStorage and window.location in login.js

--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
   <!-- HTML include jquery - CDN til jquery library -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
   <script src="js/jqueryIncludeHeaderFooter.js"></script>
-  <script src="js/login.js" defer></script>
+
 </head>
 <body>
 
@@ -27,6 +27,6 @@
 </div>
 
 <div id="footer"></div>
-
+<script src="js/login.js"></script>
 </body>
 </html>
