booking and activity dynamically

--- a/booking.html
+++ b/booking.html
@@ -65,6 +65,9 @@
 </div>
 
 <div id="footer"></div>
+<script src="js/dropdownactivityfill.js"></script>
+<script src="js/dropdowninstructorfill.js"></script>
 <script src="js/booking.js"></script>
+
 </body>
 </html>
