login and header changes

--- a/header.html
+++ b/header.html
@@ -1,13 +1,16 @@
 <header>
   <!-- Lav til en nav -->
-    <div class="Logo">
-    <a href="index.html"> <img src="images/LogoPink.png" width="200px", ></a>
-    <a href ="login.html" id="loginHeader">Login</a>
-    </div>
+  <div class="Logo">
+    <a href="index.html"> <img src="images/LogoPink.png" width="200px"></a>
+    <!--        <a href="login.html" id="loginHeader">Login</a>-->
+    <button id="loginHeader" type="submit">Login</button>
+  </div>
 
-    <div class="panel">
-      <a href="#" id ="shopHeader" >Shop</a>
-      <a href ="#" id="pakkerHeader" >Pakker </a>
+  <div class="panel">
+    <a href="#" id="shopHeader">Shop</a>
+    <a href="#" id="pakkerHeader">Pakker </a>
+    <a href="booking.html" id="bookingHeader" style="display: none">Booking </a>
 
-    </div>
+  </div>
+  <script src="js/displayLogin.js"></script>
 </header>
