styling before not dummy login done for review

--- a/header.html
+++ b/header.html
@@ -7,10 +7,15 @@
   </div>
 
   <div class="panel">
-    <a href="#" id="shopHeader">Shop</a>
-    <a href="#" id="pakkerHeader">Pakker </a>
-    <a href="booking.html" id="bookingHeader" style="display: none">Booking </a>
-
+    <a href="#" id="shopHeader">Shop
+      <i class="fa-solid fa-cart-shopping"></i>
+    </a>
+    <a href="#" id="pakkerHeader">Pakker
+      <i class="fa-solid fa-box"></i>
+    </a>
+    <a href="booking.html" id="bookingHeader" style="display: none">Booking <i class="fa-solid fa-calendar-days"></i>
+    </a>
   </div>
+
   <script src="js/displayLogin.js"></script>
 </header>
