--- a/booking.html
+++ b/booking.html
@@ -9,6 +9,9 @@
   <!-- HTML include jquery - CDN til jquery library -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
   <script src="js/jqueryIncludeHeaderFooter.js"></script>
+
+  <!-- Font awesome -->
+  <script src="https://kit.fontawesome.com/bced513090.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
