login and header changes

--- a/header.html
+++ b/header.html
@@ -2,8 +2,7 @@
   <!-- Lav til en nav -->
   <div class="Logo">
     <a href="index.html"> <img src="images/LogoPink.png" width="200px"></a>
-    <!--        <a href="login.html" id="loginHeader">Login</a>-->
-    <button id="loginHeader" type="submit">Login</button>
+    <a href="login.html" id="loginHeader">Login</a>
   </div>
 
   <div class="panel">
