--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <header>
   <!-- Lav til en nav -->
   <div class="Logo">
-    <a href="index.html"> <img src="images/LogoPink.png" width="200px"></a>
+    <a href="index.html"> <img src="images/logo.png" width="200px"></a>
     <a href="login.html" id="loginHeader">Login</a>
   </div>
 
