påbegyndt delete funktion

--- a/booking.html
+++ b/booking.html
@@ -60,10 +60,11 @@
         <th>Aktivitet</th>
         <th>Antal Deltagere</th>
         <th>Instruktør</th>
+        <th>Slet</th>
       </tr>
       <tr></tr>
     </table>
-
+  <input type="submit" value="Slet" class="deleteButton">
   </div>
 
 </div>
