html search and css

--- a/booking.html
+++ b/booking.html
@@ -47,6 +47,14 @@
     </form>
   </div>
 
+  <div id="search">
+    <h3>Søg efter booking</h3>
+    <form action="http://localhost:8080/search" method="post" id="searchForm">
+      <input type="text" placeholder="kamille@gmail.com" name="searchInput" id="searchFormInput">
+      <input type="submit" value="Søg" class="saveButton">
+    </form>
+  </div>
+
   <div id="bookings">
     <h3>Bookings</h3>
     <table id="tableBooking">
