Færdiggjort shopping i html + css

--- a/shopping.html
+++ b/shopping.html
@@ -24,15 +24,22 @@
 <div id="content">
 
   <h1> Shoppping i Bobs Fun Land</h1>
+  <p> Ønsker du at købe i Bobs webshop, som send en mail til  trollmax@outlook.dk med din bestilling</p>
 
 </table>
 
 <h2>Merchandise</h2>
 <table class ="merch">
   <tr>
-    <th>T-shirt</th>
-    <th>Cap</th>
-    <th>Hoodie</th>
+    <th>T-shirt <img src="images/t-shirt.png" id="tshirt image">
+    <p> 150 kr.</p>
+    </th>
+    <th>Cap <img src="images/cap.png" id="cap image">
+    <p> 100 kr.</p>
+    </th>
+    <th>Hoodie<img src="images/hoodie.png" id="hoodie image">
+    <p> 200 kr.</p>
+    </th>
   </tr>
 
 </table>
@@ -40,31 +47,60 @@
 <h3>Mad</h3>
 <table class = "food">
   <tr>
-    <th>Sandwich</th>
-    <th>Pølsehorn</th>
-    <th>Ribs</th>
-    <tr>
+    <th>Sandwich <img src="images/sandwich.png" id="sandwich image">
+      <p> 49 kr.</p>
+    </th>
+    <th>Pølsehorn <img src="images/pølsehorn.png" id="pølsehorn image">
+      <p> 25 kr.</p>
+    </th>
+    <th>Ribs <img src="images/ribs.png" id="ribs image">
+      <p> 80 kr.</p>
+    </th>
       <tr>
-    <th>Suppe</th>
-    <th>Pandekager</th>
-    <th>Burger</th>
-    <th>Pommes frites</th>
+    <th>Suppe <img src="images/suppe.png" id="suppe image">
+     <p> 80 kr.</p></th>
+    <th>Pandekager  <img src="images/pandekager.png" id="pandekager image">
+      <p> 60 kr.</p>
+    </th>
+    <th>Burger <img src="images/burger.png" id="burger image">
+     <p> 86 kr.</p></th>
+</tr>
+  <tr>
+    <th>Pommes frites <img src="images/fries.png" id="pommesfrites image">
+      <p> 35 kr.</p>
+    </th>
   </tr>
 </table>
 
 <h4>Drikke</h4>
 <table class = "drinks">
   <tr>
-    <th>Kaffe</th>
-    <th>Varm kakao</th>
-    <th>Sodavand: Cola, Sprite, Fanta</th>
+    <th>Kaffe <img src="images/kaffe.png" id="kaffe image">
+      <p> 30 kr.</p>
+    </th>
+    <th>Varm kakao <img src="images/varmkakao.png" id="kakao image">
+      <p> 20 kr.</p>
+    </th>
+    <th> Cola <img src="images/%20cola.png" id="cola image">
+      <p> 20 kr.</p>
+    </th>
+      </tr>
+  <tr>
+     <th> Sprite<img src="images/sprite.png" id="sprite image">
+       <p> 20 kr.</p>
+     </th>
+    <th> Fanta <img src="images/fanta.png" id="fanta image">
+      <p> 20 kr.</p>
+    </th>
+    <th>Tuborg øl <img src="images/øl.png" id="øl image">
+      <p> 25 kr.</p>
+    </th>
     <tr/>
     <tr>
-    <th>Tuborg øl</th>
-    <th>Mjød</th>
+    <th>Mjød<img src="images/mjødd.png" id="mjød image">
+      <p> 45 kr.</p>
+    </th>
   </tr>
-
-
 
 
 </table>
