--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
   <!-- Font awesome -->
   <script src="https://kit.fontawesome.com/bced513090.js" crossorigin="anonymous"></script>
+  <script src="js/testFile.js" defer></script>
 
 </head>
 
