edit input name

--- a/booking.html
+++ b/booking.html
@@ -39,7 +39,7 @@
         <p>Tid</p>
         <input name="time" type="time" required>
         <p>Deltagere</p>
-        <input name="participants" type="text" placeholder="eks 5" required class="input">
+        <input name="nrOfParticipants" type="text" placeholder="eks 5" required class="input">
         <p>Instruktør</p>
         <select id="instructorDropDown"></select>
       </div>
