--- a/booking.html
+++ b/booking.html
@@ -69,6 +69,7 @@
         <th>Antal Deltagere</th>
         <th>Instruktør</th>
         <th>Slet</th>
+        <th>Rediger</th>
       </tr>
       <tr></tr>
     </table>
@@ -80,5 +81,6 @@
 <script src="js/dropdownactivityfill.js"></script>
 <script src="js/dropdowninstructorfill.js"></script>
 <script src="js/booking.js"></script>
+<script src="js/editbooking.js"></script>
 </body>
 </html>
