--- a/booking.html
+++ b/booking.html
@@ -64,6 +64,7 @@
         <th>Antal Deltagere</th>
         <th>Instruktør</th>
         <th>Slet</th>
+        <th>Rediger</th>
       </tr>
       <tr></tr>
     </table>
@@ -96,10 +97,7 @@
 <script src="js/dropdownactivityfill.js"></script>
 <script src="js/dropdowninstructorfill.js"></script>
 <script src="js/booking.js"></script>
-<<<<<<< HEAD
 <script src="js/editbooking.js"></script>
-=======
 <script src="js/searchbooking.js"></script>
->>>>>>> f4170e4a7f8f326624fdb7d3fe4a434d4febe76b
 </body>
 </html>
