--- a/booking.html
+++ b/booking.html
@@ -10,6 +10,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
   <script src="js/jqueryIncludeHeaderFooter.js"></script>
 
+  <!-- automail -->
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
+
   <!-- Font awesome -->
   <script src="https://kit.fontawesome.com/bced513090.js" crossorigin="anonymous"></script>
 
