--- a/booking.html
+++ b/booking.html
@@ -16,6 +16,8 @@
   <!-- Font awesome -->
   <script src="https://kit.fontawesome.com/bced513090.js" crossorigin="anonymous"></script>
 
+
+  <script src="js/loginCheck.js" defer></script>
 </head>
 
 <body>
