Add beggining og Edit function

--- a/booking.html
+++ b/booking.html
@@ -33,18 +33,18 @@
       <p id="bookingFormHeader">Registrer booking</p>
       <div id="bookingFormContent">
         <p>Kunde information</p>
-        <input name="customerName" type="text" placeholder="eks Kirstine" class="input">
-        <input name="customerEmail" type="text" placeholder="eks Kirstine@mail.dk" class="input">
-        <input name="customerPhone" type="text" placeholder="50939393" class="input">
+        <input name="customerName" type="text" placeholder="eks Kirstine" class="input" id="customerName">
+        <input name="customerEmail" type="text" placeholder="eks Kirstine@mail.dk" class="input" id="customerEmail">
+        <input name="customerPhone" type="text" placeholder="50939393" class="input" id="customerPhone">
 
         <p>Aktivitet</p>
         <select id="activityDropDown"></select>
         <p>Dato</p>
-        <input name="date" type="date" required>
+        <input name="date" type="date" id="date" required>
         <p>Tid</p>
-        <input name="time" type="time" required>
+        <input name="time" type="time" id="time" required>
         <p>Deltagere</p>
-        <input name="nrOfParticipants" type="text" placeholder="eks 5" required class="input">
+        <input name="nrOfParticipants" type="text" placeholder="eks 5" required class="input" id="nrOfParticipants">
         <p>Instruktør</p>
         <select id="instructorDropDown"></select>
       </div>
