header referance to packages and shopping html page

--- a/header.html
+++ b/header.html
@@ -6,10 +6,10 @@
   </div>
 
   <div class="panel">
-    <a href="#" id="shopHeader">Shop
+    <a href="shopping.html" id="shopHeader">Shop
       <i class="fa-solid fa-cart-shopping"></i>
     </a>
-    <a href="#" id="pakkerHeader">Pakker
+    <a href="packages.html" id="pakkerHeader">Pakker
       <i class="fa-solid fa-box"></i>
     </a>
     <a href="booking.html" id="bookingHeader" style="display: none">Booking <i class="fa-solid fa-calendar-days"></i>
