--- a/index.html
+++ b/index.html
@@ -36,31 +36,29 @@
 
 
     <div class="chosenActivity">
-      <h3 id="activityName">Valgt Aktivitet:</h3>
+      <h3 id="activityName"></h3>
+
       <div id="contentActivity">
+
         <div class="requirements">
-          <h4> Krav for aktivtitet</h4>
-          <p id="age"> Alder:</p>
-          <p id="height"> Højde:</p>
+          <p id="age"></p>
+          <p id="height"></p>
         </div>
 
-
         <div class="adventureImg">
-          <img src="images/adventure.jpg" width="400px" id="activityImage">
+          <img src="" width="400px" id="activityImage">
         </div>
 
         <div class="information">
-          <h4> Information om aktivitet:</h4>
           <p id="activityInformation"></p>
         </div>
       </div>
-
-      <div id="bookingInformation">
-        <p> Ønsker du at lave en booking </p>
-        <p>så send en mail til trollmax@outlook.dk eller ring på; +45 27850346 </p>
-        <p>Med følgende information; </p>
-        <p>Den ønskede aktivitet, dit navn, telefonnummer, mail, antal deltagere, dato og tid.</p>
-      </div>
+    </div>
+    <div id="bookingInformation">
+      <p> Ønsker du at lave en booking </p>
+      <p>så send en mail til trollmax@outlook.dk eller ring på; +45 27850346 </p>
+      <p>Med følgende information; </p>
+      <p>Den ønskede aktivitet, dit navn, telefonnummer, mail, antal deltagere, dato og tid.</p>
     </div>
   </div>
 </div>
