Add edit changes

--- a/booking.html
+++ b/booking.html
@@ -48,7 +48,7 @@
         <p>Instruktør</p>
         <select id="instructorDropDown"></select>
       </div>
-      <input type="submit" value="Gem" class="saveButton">
+      <input type="submit" value="Gem" class="saveButton" id="saveButton">
     </form>
   </div>
 
