--- a/booking.html
+++ b/booking.html
@@ -47,6 +47,7 @@
         <input name="nrOfParticipants" type="text" placeholder="eks 5" required class="input" id="nrOfParticipants">
         <p>Instruktør</p>
         <select id="instructorDropDown"></select>
+        <input name="orderNumber" id="orderNumber">
       </div>
       <input type="submit" value="Gem" class="saveButton" id="saveButton">
     </form>
