--- a/editBooking.html
+++ b/editBooking.html
@@ -53,7 +53,7 @@
 
 <script src="js/dropdownactivityfill.js"></script>
 <script src="js/dropdowninstructorfill.js"></script>
-<script src="js/booking.js"></script>
-<script src="js/editbooking.js"></script>
+<script src="js/booking/booking.js"></script>
+<script src="js/booking/editbooking.js"></script>
 </body>
 </html>
