--- a/login.html
+++ b/login.html
@@ -29,6 +29,6 @@
 </div>
 
 <div id="footer"></div>
-<script src="js/login.js"></script>
+<script src="js/login/login.js"></script>
 </body>
 </html>
