remove ekstra in search booking and hidden ordernumber in booking html

--- a/booking.html
+++ b/booking.html
@@ -47,7 +47,7 @@
         <input name="nrOfParticipants" type="text" placeholder="eks 5" required class="input" id="nrOfParticipants">
         <p>Instruktør</p>
         <select id="instructorDropDown"></select>
-        <input name="orderNumber" id="orderNumber">
+        <input name="orderNumber" id="orderNumber" hidden>
       </div>
       <input type="submit" value="Gem" class="saveButton" id="saveButton">
     </form>
