--- a/booking.html
+++ b/booking.html
@@ -10,14 +10,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
   <script src="js/jqueryIncludeHeaderFooter.js"></script>
 
-  <!-- automail -->
-  <script src="https://smtpjs.com/v3/smtp.js"></script>
-
   <!-- Font awesome -->
   <script src="https://kit.fontawesome.com/bced513090.js" crossorigin="anonymous"></script>
 
 
-  <script src="js/login/loginCheck.js" defer></script>
 </head>
 
 <body>
@@ -69,8 +65,8 @@
         <th>Aktivitet</th>
         <th>Antal Deltagere</th>
         <th>Instruktør</th>
-        <th>Slet</th>
-        <th>Rediger</th>
+        <th style="display: none" class="adminAccessTable">Slet</th>
+        <th style="display: none" class="adminAccessTable">Rediger</th>
       </tr>
       <tr></tr>
     </table>
@@ -90,8 +86,8 @@
         <th>Aktivitet</th>
         <th>Antal Deltagere</th>
         <th>Instruktør</th>
-        <th>Slet</th>
-        <th>Rediger</th>
+        <th style="display: none" class="adminAccessTable">Slet</th>
+        <th style="display: none" class="adminAccessTable">Rediger</th>
       </tr>
       <tr></tr>
     </table>
@@ -109,5 +105,6 @@
 <script src="js/booking/createbookingtable.js"></script>
 <script src="js/booking/fillallbookings.js"></script>
 <script src="js/booking/fillsearchbookingtable.js"></script>
+<script src="js/login/loginCheck.js"></script>
 </body>
 </html>
