--- a/booking.html
+++ b/booking.html
@@ -24,7 +24,7 @@
 
   <h2>Booking</h2>
 
-  <div id="booking">
+  <div id="booking" style="display: none">
     <form action="http://localhost:8080/booking" method="post" id="bookForm">
       <p id="bookingFormHeader">Registrer booking</p>
       <div id="bookingFormContent">
