index border for activity display

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="chosenActivity">
       <h3 id="activityName"></h3>
 
-      <div id="contentActivity">
+      <div id="contentActivity" style="display: none">
 
         <div class="requirements">
           <p id="age"></p>
