--- a/login.html
+++ b/login.html
@@ -11,6 +11,8 @@
 
   <!-- Font awesome -->
   <script src="https://kit.fontawesome.com/bced513090.js" crossorigin="anonymous"></script>
+
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
 
