--- a/packages.html
+++ b/packages.html
@@ -9,6 +9,8 @@
   <!-- HTML include jquery - CDN til jquery library -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
   <script src="js/jqueryIncludeHeaderFooter.js"></script>
+
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
 <div id="header"></div>
