--- a/booking.html
+++ b/booking.html
@@ -13,7 +13,7 @@
   <!-- Font awesome -->
   <script src="https://kit.fontawesome.com/bced513090.js" crossorigin="anonymous"></script>
 
-
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
